# inbound-sdr-copilot

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py  models.py  outreach.py  scoring.py
backend/app/services/: __init__.py  census.py  company.py  company_classifier.py  datausa.py  enrichment.py  geo.py  geocoder.py  lead_processing.py  market.py  outreach.py  property_classifier.py
backend/scripts/: export_company_fit_golden_cases.py  run_market_fit_batch.py  smoke_analyze_endpoint.py  verify_company_fit.py  verify_market_fit.py
backend/tests/: test_backend_consolidation.py  test_company_classifier.py  test_company_fit_golden_cases.py  test_company_fit_scoring.py  test_generate_outreach.py  test_market_fit_scoring.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/leads/[id]/: page.tsx
frontend/components/: add-lead-dialog.tsx  csv-upload-dialog.tsx
frontend/components/ui/: dialog.tsx  dropdown-menu.tsx  progress.tsx
frontend/lib/: sample-leads.ts  store.ts  use-hydrated.ts
frontend/lib/api/: client.ts  id.ts  types.ts
